fixed vh issue causing y axis white space on landng page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ body {
 /*-------------------Landing page columns*/
 
 .index-container {
-    height: 150vh;
+    height: 140vh;
     display: flex;
     flex-direction: column;
     margin: 100px 100px 50px 100px;
